Nuevas funciones: Token por Correo + Emocion con auth
