# src/adapter/in/routes/usuarioRoutes.js
@@ -1,10 +1,11 @@
 // usuarioRoutes.js
 import express from "express";
-import { registrarUsuario, obtenerUsuarios } from "../../../controllers/usuarioController.js";
+import { registrarUsuario, obtenerUsuarios, loginUsuario } from "../../../controllers/usuarioController.js";
 
 const router = express.Router();
 
 router.post("/", registrarUsuario);
 router.get("/", obtenerUsuarios);
+router.post("/login", loginUsuario);
 
 export default router;
